<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffbb0"
    android:padding="15dp"
    tools:context=".ServiceDetails">

    <TextView
        android:id="@+id/textPaymentHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/service_details_header"
        android:layout_centerHorizontal="true"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        android:fontFamily="sans-serif-black"/>

    <RadioGroup
        android:layout_marginTop="30dp"
        android:id="@+id/groupradio"
        android:layout_below="@+id/textPaymentHeader"
        android:layout_marginLeft="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_id1"
            android:textColor="@color/purple_200"
            android:buttonTint="@color/purple_200"
            android:text="@string/choice_1"
            android:textSize="20sp"/>

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_id2"
            android:textColor="@color/purple_200"
            android:buttonTint="@color/purple_200"
            android:text="@string/choice_2"
            android:textSize="20sp"/>

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_id3"
            android:textColor="@color/purple_200"
            android:buttonTint="@color/purple_200"
            android:text="@string/choice_3"
            android:textSize="20sp"/>

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_id4"
            android:textColor="@color/purple_200"
            android:buttonTint="@color/purple_200"
            android:text="@string/choice_4"
            android:textSize="20sp"/>

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_id5"
            android:textColor="@color/purple_200"
            android:buttonTint="@color/purple_200"
            android:text="@string/choice_5"
            android:textSize="20sp"/>

    </RadioGroup>

    <TextView
        android:id="@+id/textPaymentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/groupradio"
        android:layout_marginTop="70dp"
        android:text="@string/booking_time"
        android:layout_centerHorizontal="true"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        android:fontFamily="sans-serif-black"/>

    <Button
        android:id="@+id/btnPick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:padding="10dp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@id/textPaymentAmount"
        android:text="@string/pick_date_and_time"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/btnPick"
        android:visibility="gone" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button"
        android:padding="10dp"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:onClick="openBookSuccessActivity"
        android:text="@string/confirm_booking" />

</RelativeLayout>