<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffbb0"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bannerImage"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/banner" />

    <TextView
        android:id="@+id/mainTextHeader1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/bannerImage"
        android:layout_margin="30dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/main_header"
        android:textColor="@color/design_default_color_primary"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/mainTextHeader2"
        android:layout_width="match_parent"
        android:layout_below="@id/mainTextHeader1"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="@string/main_sub_header"
        android:textColor="@color/design_default_color_primary"
        android:textSize="22sp"/>

    <LinearLayout
        android:id="@+id/linlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_below="@id/mainTextHeader2"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_acService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/our_services"
            android:textAllCaps="false"
            android:padding="10dp"
            android:textColor="@color/white"
            android:onClick="openServiceListActivity"
            android:background="@drawable/custom_button"
            android:textSize="20sp"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/button_bookService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_service"
            android:textAllCaps="false"
            android:background="@drawable/custom_button"
            android:padding="10dp"
            android:textColor="@color/white"
            android:onClick="openServiceDetailsActivity"
            android:textSize="20sp"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

</RelativeLayout>